--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -57,6 +57,14 @@
 		margin: 0px auto;
 		width: 1200px;
 	}
+	
+	.table
+	{
+		border-radius: 8px;
+		border-style:solid;
+		border-width:2px;
+		
+	}
 
 /*********************************************************************************/
 /* Image Style                                                                   */
