--- a/app/webroot/css/demo_table_jui.css
+++ b/app/webroot/css/demo_table_jui.css
@@ -357,7 +357,7 @@ table.display tr.odd.row_selected td {
  * Sorting classes for columns
  */
 /* For the standard odd/even */
-tr.odd td.sorting_1 {
+/*tr.odd td.sorting_1 {
 	background-color: #D3D6FF;
 }
 
@@ -379,7 +379,7 @@ tr.even td.sorting_2 {
 
 tr.even td.sorting_3 {
 	background-color: #F9F9FF;
-}
+}*/
 
 
 /* For the Conditional-CSS grading rows */
