--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -64,6 +64,16 @@
 		border-style:solid;
 		border-width:2px;
 	}
+	
+	.meal
+	{
+		border-radius: 1px;
+		border-style:solid;
+		border-width:2px;
+		padding: 5px;
+		width: auto;
+	}
+
 
 /*********************************************************************************/
 /* Image Style                                                                   */
@@ -630,6 +640,37 @@
 overflow: hidden;
 text-color: white;
 h1 color: white;
+}
+
+.login tbody tr td 
+{
+	color: Black ;
+	font-weight:bold;
+}
+
+/*********************************************************************************/
+/* fonts                                                              */
+/*********************************************************************************/
+
+.step
+{
+	color: Black ;
+	font-weight:bold;
+}
+
+/*********************************************************************************/
+/* flash                                                              */
+/*********************************************************************************/
+#flashMessage
+{
+	color: white ;
+	font-weight:bold;
+	padding: 2px 2px 2px 10px;
+	background: #5EB990;
+	border-radius:10px;
+	border: 2px solid;
+	border-color: black;
+	margin-bottom: 20px;
 }
 
 
