--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -1147,24 +1147,36 @@ h1 color: white;
 
 
 /*
-	Variable Grid System (Fluid Version).
+	Variable Grid System.
 	Learn more ~ http://www.spry-soft.com/grids/
-	Based on 960 Grid System - http://960.gs/ & 960 Fluid - http://www.designinfluences.com/
+	Based on 960 Grid System - http://960.gs/
 
 	Licensed under GPL and MIT.
 */
 
+/*
+  Forces backgrounds to span full width,
+  even if there is horizontal scrolling.
+  Increase this if your layout is wider.
+
+  Note: IE6 works fine without this fix.
+*/
+
+body {
+  min-width: 1272px;
+}
 
 /* Containers
 ----------------------------------------------------------------------------------------------------*/
 .container_24 {
-	width: 96%;
 	margin-left: 2%;
 	margin-right: 2%;
+	/*width: 1300px;*/
 }
 
 /* Grid >> Global
 ----------------------------------------------------------------------------------------------------*/
+
 
 .grid_1,
 .grid_2,
@@ -1193,9 +1205,39 @@ h1 color: white;
 	display:inline;
 	float: left;
 	position: relative;
-	margin-left: .3%;
-	margin-right: .3%;
+	margin-left: 3px;
+	margin-right: 3px;
 }
+
+
+
+.push_1, .pull_1,
+.push_2, .pull_2,
+.push_3, .pull_3,
+.push_4, .pull_4,
+.push_5, .pull_5,
+.push_6, .pull_6,
+.push_7, .pull_7,
+.push_8, .pull_8,
+.push_9, .pull_9,
+.push_10, .pull_10,
+.push_11, .pull_11,
+.push_12, .pull_12,
+.push_13, .pull_13,
+.push_14, .pull_14,
+.push_15, .pull_15,
+.push_16, .pull_16,
+.push_17, .pull_17,
+.push_18, .pull_18,
+.push_19, .pull_19,
+.push_20, .pull_20,
+.push_21, .pull_21,
+.push_22, .pull_22,
+.push_23, .pull_23,
+.push_24, .pull_24 {
+	position:relative;
+}
+
 
 /* Grid >> Children (Alpha ~ First, Omega ~ Last)
 ----------------------------------------------------------------------------------------------------*/
@@ -1213,100 +1255,101 @@ h1 color: white;
 
 
 .container_24 .grid_1 {
-	width:2.167%;
+	width:47px;
 }
 
 .container_24 .grid_2 {
-	width:6.333%;
+	width:100px;
 }
 
 .container_24 .grid_3 {
-	width:10.5%;
+	width:153px;
 }
 
 .container_24 .grid_4 {
-	width:14.667%;
+	width:206px;
 }
 
 .container_24 .grid_5 {
-	width:18.833%;
+	width:259px;
 }
 
 .container_24 .grid_6 {
-	width:23.0%;
+	width:312px;
 }
 
 .container_24 .grid_7 {
-	width:27.167%;
+	width:365px;
 }
 
 .container_24 .grid_8 {
-	width:31.333%;
+	width:418px;
 }
 
 .container_24 .grid_9 {
-	width:35.5%;
+	width:471px;
 }
 
 .container_24 .grid_10 {
-	width:39.667%;
+	width:524px;
 }
 
 .container_24 .grid_11 {
-	width:43.833%;
+	width:577px;
 }
 
 .container_24 .grid_12 {
-	width:48.0%;
+	width:630px;
 }
 
 .container_24 .grid_13 {
-	width:52.167%;
+	width:683px;
 }
 
 .container_24 .grid_14 {
-	width:56.333%;
+	width:736px;
 }
 
 .container_24 .grid_15 {
-	width:60.5%;
+	width:789px;
 }
 
 .container_24 .grid_16 {
-	width:64.667%;
+	width:842px;
 }
 
 .container_24 .grid_17 {
-	width:68.833%;
+	width:895px;
 }
 
 .container_24 .grid_18 {
-	width:73.0%;
+	width:948px;
 }
 
 .container_24 .grid_19 {
-	width:77.167%;
+	width:1001px;
 }
 
 .container_24 .grid_20 {
-	width:81.333%;
+	width:1054px;
 }
 
 .container_24 .grid_21 {
-	width:85.5%;
+	width:1107px;
 }
 
 .container_24 .grid_22 {
-	width:89.667%;
+	width:1160px;
 }
 
 .container_24 .grid_23 {
-	width:93.833%;
+	width:1213px;
 }
 
 .container_24 .grid_24 {
-	width:98.0%;
+	width:1266px;
 }
+
 
 
 
@@ -1315,95 +1358,95 @@ h1 color: white;
 
 
 .container_24 .prefix_1 {
-	padding-left:4.167%;
+	padding-left:53px;
 }
 
 .container_24 .prefix_2 {
-	padding-left:8.333%;
+	padding-left:106px;
 }
 
 .container_24 .prefix_3 {
-	padding-left:12.5%;
+	padding-left:159px;
 }
 
 .container_24 .prefix_4 {
-	padding-left:16.667%;
+	padding-left:212px;
 }
 
 .container_24 .prefix_5 {
-	padding-left:20.833%;
+	padding-left:265px;
 }
 
 .container_24 .prefix_6 {
-	padding-left:25.0%;
+	padding-left:318px;
 }
 
 .container_24 .prefix_7 {
-	padding-left:29.167%;
+	padding-left:371px;
 }
 
 .container_24 .prefix_8 {
-	padding-left:33.333%;
+	padding-left:424px;
 }
 
 .container_24 .prefix_9 {
-	padding-left:37.5%;
+	padding-left:477px;
 }
 
 .container_24 .prefix_10 {
-	padding-left:41.667%;
+	padding-left:530px;
 }
 
 .container_24 .prefix_11 {
-	padding-left:45.833%;
+	padding-left:583px;
 }
 
 .container_24 .prefix_12 {
-	padding-left:50.0%;
+	padding-left:636px;
 }
 
 .container_24 .prefix_13 {
-	padding-left:54.167%;
+	padding-left:689px;
 }
 
 .container_24 .prefix_14 {
-	padding-left:58.333%;
+	padding-left:742px;
 }
 
 .container_24 .prefix_15 {
-	padding-left:62.5%;
+	padding-left:795px;
 }
 
 .container_24 .prefix_16 {
-	padding-left:66.667%;
+	padding-left:848px;
 }
 
 .container_24 .prefix_17 {
-	padding-left:70.833%;
+	padding-left:901px;
 }
 
 .container_24 .prefix_18 {
-	padding-left:75.0%;
+	padding-left:954px;
 }
 
 .container_24 .prefix_19 {
-	padding-left:79.167%;
+	padding-left:1007px;
 }
 
 .container_24 .prefix_20 {
-	padding-left:83.333%;
+	padding-left:1060px;
 }
 
 .container_24 .prefix_21 {
-	padding-left:87.5%;
+	padding-left:1113px;
 }
 
 .container_24 .prefix_22 {
-	padding-left:91.667%;
+	padding-left:1166px;
 }
 
 .container_24 .prefix_23 {
-	padding-left:95.833%;
+	padding-left:1219px;
 }
 
 
@@ -1413,95 +1456,95 @@ h1 color: white;
 
 
 .container_24 .suffix_1 {
-	padding-right:4.167%;
+	padding-right:53px;
 }
 
 .container_24 .suffix_2 {
-	padding-right:8.333%;
+	padding-right:106px;
 }
 
 .container_24 .suffix_3 {
-	padding-right:12.5%;
+	padding-right:159px;
 }
 
 .container_24 .suffix_4 {
-	padding-right:16.667%;
+	padding-right:212px;
 }
 
 .container_24 .suffix_5 {
-	padding-right:20.833%;
+	padding-right:265px;
 }
 
 .container_24 .suffix_6 {
-	padding-right:25.0%;
+	padding-right:318px;
 }
 
 .container_24 .suffix_7 {
-	padding-right:29.167%;
+	padding-right:371px;
 }
 
 .container_24 .suffix_8 {
-	padding-right:33.333%;
+	padding-right:424px;
 }
 
 .container_24 .suffix_9 {
-	padding-right:37.5%;
+	padding-right:477px;
 }
 
 .container_24 .suffix_10 {
-	padding-right:41.667%;
+	padding-right:530px;
 }
 
 .container_24 .suffix_11 {
-	padding-right:45.833%;
+	padding-right:583px;
 }
 
 .container_24 .suffix_12 {
-	padding-right:50.0%;
+	padding-right:636px;
 }
 
 .container_24 .suffix_13 {
-	padding-right:54.167%;
+	padding-right:689px;
 }
 
 .container_24 .suffix_14 {
-	padding-right:58.333%;
+	padding-right:742px;
 }
 
 .container_24 .suffix_15 {
-	padding-right:62.5%;
+	padding-right:795px;
 }
 
 .container_24 .suffix_16 {
-	padding-right:66.667%;
+	padding-right:848px;
 }
 
 .container_24 .suffix_17 {
-	padding-right:70.833%;
+	padding-right:901px;
 }
 
 .container_24 .suffix_18 {
-	padding-right:75.0%;
+	padding-right:954px;
 }
 
 .container_24 .suffix_19 {
-	padding-right:79.167%;
+	padding-right:1007px;
 }
 
 .container_24 .suffix_20 {
-	padding-right:83.333%;
+	padding-right:1060px;
 }
 
 .container_24 .suffix_21 {
-	padding-right:87.5%;
+	padding-right:1113px;
 }
 
 .container_24 .suffix_22 {
-	padding-right:91.667%;
+	padding-right:1166px;
 }
 
 .container_24 .suffix_23 {
-	padding-right:95.833%;
+	padding-right:1219px;
 }
 
 
@@ -1511,95 +1554,95 @@ h1 color: white;
 
 
 .container_24 .push_1 {
-	left:4.167%;
+	left:53px;
 }
 
 .container_24 .push_2 {
-	left:8.333%;
+	left:106px;
 }
 
 .container_24 .push_3 {
-	left:12.5%;
+	left:159px;
 }
 
 .container_24 .push_4 {
-	left:16.667%;
+	left:212px;
 }
 
 .container_24 .push_5 {
-	left:20.833%;
+	left:265px;
 }
 
 .container_24 .push_6 {
-	left:25.0%;
+	left:318px;
 }
 
 .container_24 .push_7 {
-	left:29.167%;
+	left:371px;
 }
 
 .container_24 .push_8 {
-	left:33.333%;
+	left:424px;
 }
 
 .container_24 .push_9 {
-	left:37.5%;
+	left:477px;
 }
 
 .container_24 .push_10 {
-	left:41.667%;
+	left:530px;
 }
 
 .container_24 .push_11 {
-	left:45.833%;
+	left:583px;
 }
 
 .container_24 .push_12 {
-	left:50.0%;
+	left:636px;
 }
 
 .container_24 .push_13 {
-	left:54.167%;
+	left:689px;
 }
 
 .container_24 .push_14 {
-	left:58.333%;
+	left:742px;
 }
 
 .container_24 .push_15 {
-	left:62.5%;
+	left:795px;
 }
 
 .container_24 .push_16 {
-	left:66.667%;
+	left:848px;
 }
 
 .container_24 .push_17 {
-	left:70.833%;
+	left:901px;
 }
 
 .container_24 .push_18 {
-	left:75.0%;
+	left:954px;
 }
 
 .container_24 .push_19 {
-	left:79.167%;
+	left:1007px;
 }
 
 .container_24 .push_20 {
-	left:83.333%;
+	left:1060px;
 }
 
 .container_24 .push_21 {
-	left:87.5%;
+	left:1113px;
 }
 
 .container_24 .push_22 {
-	left:91.667%;
+	left:1166px;
 }
 
 .container_24 .push_23 {
-	left:95.833%;
+	left:1219px;
 }
 
 
@@ -1609,135 +1652,135 @@ h1 color: white;
 
 
 .container_24 .pull_1 {
-	left:-4.167%;
+	left:-53px;
 }
 
 .container_24 .pull_2 {
-	left:-8.333%;
+	left:-106px;
 }
 
 .container_24 .pull_3 {
-	left:-12.5%;
+	left:-159px;
 }
 
 .container_24 .pull_4 {
-	left:-16.667%;
+	left:-212px;
 }
 
 .container_24 .pull_5 {
-	left:-20.833%;
+	left:-265px;
 }
 
 .container_24 .pull_6 {
-	left:-25.0%;
+	left:-318px;
 }
 
 .container_24 .pull_7 {
-	left:-29.167%;
+	left:-371px;
 }
 
 .container_24 .pull_8 {
-	left:-33.333%;
+	left:-424px;
 }
 
 .container_24 .pull_9 {
-	left:-37.5%;
+	left:-477px;
 }
 
 .container_24 .pull_10 {
-	left:-41.667%;
+	left:-530px;
 }
 
 .container_24 .pull_11 {
-	left:-45.833%;
+	left:-583px;
 }
 
 .container_24 .pull_12 {
-	left:-50.0%;
+	left:-636px;
 }
 
 .container_24 .pull_13 {
-	left:-54.167%;
+	left:-689px;
 }
 
 .container_24 .pull_14 {
-	left:-58.333%;
+	left:-742px;
 }
 
 .container_24 .pull_15 {
-	left:-62.5%;
+	left:-795px;
 }
 
 .container_24 .pull_16 {
-	left:-66.667%;
+	left:-848px;
 }
 
 .container_24 .pull_17 {
-	left:-70.833%;
+	left:-901px;
 }
 
 .container_24 .pull_18 {
-	left:-75.0%;
+	left:-954px;
 }
 
 .container_24 .pull_19 {
-	left:-79.167%;
+	left:-1007px;
 }
 
 .container_24 .pull_20 {
-	left:-83.333%;
+	left:-1060px;
 }
 
 .container_24 .pull_21 {
-	left:-87.5%;
+	left:-1113px;
 }
 
 .container_24 .pull_22 {
-	left:-91.667%;
+	left:-1166px;
 }
 
 .container_24 .pull_23 {
-	left:-95.833%;
+	left:-1219px;
 }
 
 
 
 
-/* Clear Floated Elements
+/* `Clear Floated Elements
 ----------------------------------------------------------------------------------------------------*/
 
 /* http://sonspring.com/journal/clearing-floats */
 
 .clear {
-	clear: both;
-	display: block;
-	overflow: hidden;
-	visibility: hidden;
-	width: 0;
-	height: 0;
+  clear: both;
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  width: 0;
+  height: 0;
 }
 
-/* http://perishablepress.com/press/2008/02/05/lessons-learned-concerning-the-clearfix-css-hack */
+/* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
+
+.clearfix:before,
+.clearfix:after {
+  content: '\0020';
+  display: block;
+  overflow: hidden;
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
 
 .clearfix:after {
-	clear: both;
-	content: ' ';
-	display: block;
-	font-size: 0;
-	line-height: 0;
-	visibility: hidden;
-	width: 0;
-	height: 0;
+  clear: both;
 }
+
+/*
+  The following zoom:1 rule is specifically for IE6 + IE7.
+  Move to separate stylesheet if invalid CSS is a problem.
+*/
 
 .clearfix {
-	display: inline-block;
-}
-
-* html .clearfix {
-	height: 1%;
-}
-
-.clearfix {
-	display: block;
+  zoom: 1;
 }
