--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -72,6 +72,7 @@
 		border-width:2px;
 		padding: 5px;
 		width: auto;
+		background: white;
 	}
 
 
@@ -581,14 +582,16 @@
 
 	#welcome
 	{
-		width: 1100px;
-		margin-bottom: 5em;
+		width: 82%;
+		/*margin-bottom: 5em;*/
+		
+		margin: auto;
 		padding: 0em 50px;
 	}
 
 	#welcome h2
 	{
-		margin: 1em 0em;
+		margin: 5px 0em;
 		font-size: 2.7em;
 		font-weight: 700;
 		color: #454445;
@@ -602,9 +605,10 @@
 	{
 		overflow: hidden;
 		background: #FFF;
-		border-bottom: 2px solid #CFCECD;
+		border: 2px solid #CFCECD;
 		text-align: center;
 		color: #525252;
+		width: 90%;
 	}
 	
 	#three-column h2
@@ -626,8 +630,8 @@
 	#three-column #tbox3
 	{
 		float: left;
-		width: 300px;
-		padding: 80px 50px 80px 50px;
+		width: 30%;
+		padding: 10px;
 	}
 
 
