updated help menu, tooltip, and schedule table hilighting the current day

--- a/app/webroot/css/default.css
+++ b/app/webroot/css/default.css
@@ -75,6 +75,13 @@
 		width: auto;
 		background: white;
 	}
+	
+	.today
+	{
+		background: yellow;
+		border: 1px black solid;
+		border-radius: 3px;
+	}
 
 
 /*********************************************************************************/
